IGNITE-17660 Add missing opens/exports to java15+ config (#10243)