@@ -68,6 +68,7 @@ if %java_version% GEQ 15 (
     --add-opens=java.base/java.util=ALL-UNNAMED ^
     --add-opens=java.base/java.lang=ALL-UNNAMED ^
     --add-opens=java.base/java.lang.invoke=ALL-UNNAMED ^
+    --add-opens=java.sql/java.sql=ALL-UNNAMED ^
     %current_value%
 )
 
